# django-blog

./: .env.dev  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
Docker/: Dockerfile  boot.sh
blog/: admin.py  feeds.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: pagination.html
blog/templates/blog/post/: detail.html  list.html  search.html  share.html
blogg/: admin.py  feeds.py  models.py  urls.py  views.py
blogg/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
blogg/templates/blog/: base.html
blogg/templates/blog/post/: detail.html  share.html
blogg/templatetags/: blog_tags.py
config/: settings.py  urls.py
